--- a/Garadice/Views/Company/Index.cshtml
+++ b/Garadice/Views/Company/Index.cshtml
@@ -8,7 +8,7 @@
     ViewBag.Title = "Companies";
 }
 
-<h2>Companies</h2>
+<h2>Companies Test</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create") |   @Html.ActionLink("Clear Search", "Index")
